[project]
name = "ccc_04"
version = "0.1.0"
description = "ccc_04 using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.80.0",
]

[project.scripts]
ccc_04 = "ccc_04.main:run"
run_crew = "ccc_04.main:run"
train = "ccc_04.main:train"
replay = "ccc_04.main:replay"
test = "ccc_04.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
